# LLVM_BugHunter-

./: .jenkinsfile  CMakeLists.txt  CountInstructions.cpp  Dockerfile  Jenkinsfile  README.md  advanced_fuzzing.cpp  build.sh  fuzz_target  fuzz_target.cpp  llvm_example  run_fuzzing.sh
examples/: llvm_example.cpp
src/: CountInstructions.cpp
tests/: test_functions.c  test_functions.ll
